[project]
name = "9m2pju-sota-alert-telegram-bot"
version = "0.1.0"
description = "Telegram bot that forwards SOTAwatch spots and alerts to subscribed users."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0,<23.0",
]

[project.scripts]
sota-telegram-bot = "sota_telegram_bot.bot:main"

[tool.pytest.ini_options]
pythonpath = ["."]
